@@ -291,6 +291,7 @@ $wgLanguageNamesEn =& $wgLanguageNames;
 	MAG_DIRECTIONMARK        => array( 1,    'DIRECTIONMARK', 'DIRMARK' ),
 	MAG_LANGUAGE			 => array( 0,	 '#LANGUAGE:' ),
 	MAG_CONTENTLANGUAGE		 => array( 1,	 'CONTENTLANGUAGE', 'CONTENTLANG' ),
+	MAG_PAGESINNAMESPACE	 => array( 1,	 'PAGESINNAMESPACE:', 'PAGESINNS:' ),
 );
 
 if (!$wgCachedMessageArrays) {
