@@ -478,6 +478,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   themselves. Some minor tweaks to the actual message content.
 * Introduce $wgContentNamespaces which allows for articles to exist in namespaces other
   than the main namespace, and still be counted as valid content in the site statistics.
+* (bug 5932) Introduce {{PAGESINNAMESPACE}} magic word
 
 == Compatibility ==
 
